[package]
name = "futures-signals-structs"
version = "0.1.0"
authors = ["Keaton Brandt <keatonbrandt@gmail.com>"]
repository = "https://github.com/KeatonTech/futures-signals-structs"
license = "MIT"
keywords = ["rust-signals", "derive", "proc-macro"]

[dependencies]
futures-signals-structs-traits = { version = "0.1.0", path = "futures-signals-structs-traits" }
futures-signals-structs-derive = { version = "0.1.0", path = "futures-signals-structs-derive" }
futures-signals = "0.3.15"

[workspace]
members = [
    "futures-signals-structs-traits",
    "futures-signals-structs-derive",
]