[package]
name = "futures-signals-structs-derive"
version = "0.2.0"
edition = "2018"
autotests = false
authors = ["Keaton Brandt <keatonbrandt@gmail.com>"]
repository = "https://github.com/KeatonTech/futures-signals-structs"
license = "MIT"
description = "Do not use this directly. Instead import futures-signals-structs"

[lib]
proc-macro = true
futures-signals-structs = "../"

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.19"

[dependencies.syn]
version = "1.0.39"
features = ["full"]
