[package]
name = "futures-signals-structs-traits"
version = "0.1.0"
authors = ["Keaton Brandt <keaton.brandt@gmail.com>"]
edition = "2018"
repository = "https://github.com/KeatonTech/futures-signals-structs"
license = "MIT"
description = "Do not use this directly. Instead import futures-signals-structs"

[dependencies]